--- a/_includes/header.html
+++ b/_includes/header.html
@@ -1,7 +1,7 @@
 <header>
   <div class="logo">
     <img src="{{ site.github.url }}/assets/img/FxGenStudioLogo.png" >
-    <!-- <a href="{{ site.github.url }}/">{{ site.title }}</a> -->
+    <a href="{{ site.github.url }}/">{{ site.title }}</a>
   </div>
   <nav>
     {% for item in site.data.settings.menu %}
