--- a/_sass/1-tools/_icon-font.scss
+++ b/_sass/1-tools/_icon-font.scss
@@ -1,10 +1,10 @@
 @font-face {
   font-family: 'icomoon';
-  src:  url('{{ site.github.url }}/assets/fonts/icomoon.eot?o3sy4d');
-  src:  url('{{ site.github.url }}/assets/fonts/icomoon.eot?o3sy4d#iefix') format('embedded-opentype'),
-    url('{{ site.github.url }}/assets/fonts/icomoon.ttf?o3sy4d') format('truetype'),
-    url('{{ site.github.url }}/assets/fonts/icomoon.woff?o3sy4d') format('woff'),
-    url('{{ site.github.url }}/assets/fonts/icomoon.svg?o3sy4d#icomoon') format('svg');
+  src:  url('fonts/icomoon.eot?o3sy4d');
+  src:  url('fonts/icomoon.eot?o3sy4d#iefix') format('embedded-opentype'),
+    url('fonts/icomoon.ttf?o3sy4d') format('truetype'),
+    url('fonts/icomoon.woff?o3sy4d') format('woff'),
+    url('fonts/icomoon.svg?o3sy4d#icomoon') format('svg');
   font-weight: normal;
   font-style: normal;
   font-display: block;
