--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -7,6 +7,7 @@
       <nav>
         {% for item in site.data.settings.social %}
           <a href="{{ item.link }}" target="_blank"><i class="fa fa-{{ item.icon }}" aria-hidden="true"></i></a>
+          <a href="{{ item.link }}" target="_blank"><i class="icon-{{ item.icon }}" aria-hidden="true"></i></a>
         {% endfor %}
       </nav>
     </div>
