--- a/assets/css/all.sass
+++ b/assets/css/all.sass
@@ -9,10 +9,10 @@ $accent: #c99065
 $accent-light: adjust-hue(saturate(lighten($accent, 11%), 12.6%), 14%)
 $selectionColor: lighten($accent, 30%)
 
-$textColor: #666
+$textColor: #222222
 $headlineColor: #333
-$bgcolor: #e5eaee
-$documentBackgroundColor: #fff
+$bgcolor: #afbfd2
+$documentBackgroundColor: #afbfd2
 
 @import '1-tools/-tools-dir'
 @import '2-base/-base-dir'
